featrue(fixed):修改登录字段显示，处理注册问题
